# nixos-config

./: README.md  flake.nix  location.nix
config/home-pc/: default.nix
home/: alacritty.nix  autojump.nix  default.nix  email.nix  fcitx5.nix  fish.nix  git.nix  nix-index.nix  pass.nix  picom.nix  shellcommon.nix  zsh.nix
home/neovim/: neovim.lua  neovim.nix
home/rofi/: rofi.nix  theme.rasi
home/termonad/: termonad.hs  termonad.nix
home/xmonad/: default.nix  hie.yaml  my-xmonad.cabal  xmobarrc  xmonad.hs  xmonad.nix
modules/home-manager/: default.nix
modules/system/: default.nix  docker.nix  fonts.nix  input-method.nix
nixos/: default.nix  fonts.nix  vscode.nix
systems/: home-pc.nix
