cabal-version:      3.0
name:               my-xmonad
version:            0.1.0.0
license:            BSD-3-Clause
author:             Wilson Cheung
maintainer:         wscheungae@gmail.com
extra-source-files: CHANGELOG.md

executable my-xmonad
  main-is:          xmonad.hs
  build-depends:
    , base
    , xmonad
    , xmonad-contrib
    , xmobar
    , containers
    , text
    , time
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010